--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,34 @@
 .DS_Store
 videos/
 pic/
+index_old.html
+m/pic/*
+m/pic/g4/b1.jpg
+
+m/pic/g4/b2.jpg
+
+m/pic/g4/b2.jpg
+
+m/pic/g4/b3.jpg
+
+m/pic/g4/b4.jpg
+
+m/pic/g4/b5.jpg
+
+m/pic/g4/s1.jpg
+
+m/pic/g4/s2.jpg
+
+m/pic/g4/s3.jpg
+
+m/pic/g4/s4.jpg
+
+m/pic/g4/s5.jpg
+
+m/pic/v1.jpg
+
+m/pic/v3.jpg
+
+m/pic/v4.jpg
+
+m/pic/v6.jpg
